# machineturing

./: CMakeLists.txt
src/: main.cpp
src/turingmachine/: grammar.cpp  grammar.hpp  turingmachine.cpp  turingmachine.hpp
